<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Note Map</string>
    <string name="menu_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="hint_subtitle">Title</string>
    <string name="hint_content">Content</string>
    <string name="delete_note">Delete note</string>
    <string name="save_note">Save note</string>
    <string name="cancel_note_changes">Cancel changes</string>
    
    <string name="change_note_pin">Change pin</string>
    <string name="select_pin">Select pin</string>
    <string name="delete_note_dialog">This note will be deleted</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="addNote">Create note</string>
    <string name="cancelNote">Cancel</string>
    <string name="edit_note">Edit note</string>
    <string name="undo">Undo</string>
    <string name="addNoteHere">At my location</string>
    <string name="tap_on_the_map">Tap on the map to add note</string>
    <string name="location_unavailable">Location unavailable</string>
    <string name="title_activity_note_list">Notes</string>
    <string name="hello_world">Hello world!</string>   
    
    <!-- added on 15/08/2013 and after-->
    
    <string name="show_list_of_notes">Show list of notes</string>
    <string name="n_notes_imported">%s notes imported to database.</string>
    <string name="empty_list">List is empty</string>
        
    <!-- added 29.08.2013 -->
    
    <string  name="sort">Sort</string>
    <string  name="sort_by">Sort by</string>
    <string name="sort_by_date">Date</string>
    <string name="sort_by_distance">Distance</string>
    <string name="sort_by_alphabet">Alphabetically</string>
    

</resources>