<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_create"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/addNote"
        android:icon="@drawable/ic_action_add"/>
    <item
        android:id="@+id/action_cancel"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:visible="false"
        android:title="@string/cancel_note_changes"
        android:icon="@drawable/ic_action_cancel"/>
    
        <item
        android:id="@+id/action_add_note_here"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:visible="false"
        android:title="@string/addNoteHere"
        android:icon="@drawable/ic_action_create_here"/>

</menu>